[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/typography/UI_Regular.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/typography/UI_bigger.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Components/vsquiz/QuestionSummary.gd" type="Script" id=3]
[ext_resource path="res://Assets/Icons/answer_checkbox_correct.png" type="Texture" id=4]
[ext_resource path="res://UI/Components/vsquiz/Card.stylebox" type="StyleBox" id=5]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 32.0
content_margin_right = 32.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.152941, 0.192157, 0.768627, 1 )
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 32.0
content_margin_right = 32.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.72549, 0.129412, 0.129412, 1 )
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="Animation" id=26]
resource_name = "Enter"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Heading/HeadingLabel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -50 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Heading/HeadingLabel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "ShowDetails"

[node name="QuestionSummary" type="PanelContainer" groups=["animatable"]]
visible = false
anchor_right = 1.0
margin_bottom = 216.0
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 1048.0
margin_bottom = 184.0

[node name="Heading" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1016.0
margin_bottom = 66.0
custom_styles/panel = SubResource( 19 )

[node name="ShowDetailsButton" type="Button" parent="VBoxContainer/Heading"]
margin_right = 1016.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0.513726, 0.513726, 0.513726, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
custom_styles/disabled = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
text = "Details"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadingLabel" type="Label" parent="VBoxContainer/Heading"]
margin_right = 1016.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Question 1"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 1016.0
margin_bottom = 152.0
alignment = 1

[node name="YouContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 506.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/YouContainer"]
margin_left = 32.0
margin_top = 8.0
margin_right = 474.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( -157.112, 90 )
size_flags_horizontal = 3

[node name="OwnNameLabel" type="Label" parent="VBoxContainer/HBoxContainer/YouContainer/HBoxContainer"]
margin_right = 370.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
custom_fonts/font = ExtResource( 2 )
text = "Du"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer/HBoxContainer/YouContainer/HBoxContainer"]
margin_left = 374.0
margin_right = 374.0
margin_bottom = 66.0
stretch_mode = 1
alignment_horizontal = 0

[node name="SelfCorrect" type="TextureRect" parent="VBoxContainer/HBoxContainer/YouContainer/HBoxContainer/AspectRatioContainer"]
margin_right = 66.0
margin_bottom = 66.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer/YouContainer/HBoxContainer"]
margin_left = 378.0
margin_right = 442.0
margin_bottom = 66.0
custom_constants/separation = 64
custom_styles/separator = SubResource( 25 )

[node name="OppContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 510.0
margin_right = 1016.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/OppContainer"]
margin_left = 32.0
margin_top = 8.0
margin_right = 474.0
margin_bottom = 74.0
alignment = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer/HBoxContainer/OppContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 66.0
size_flags_horizontal = 3
stretch_mode = 1
alignment_horizontal = 0

[node name="OpponentCorrect" type="TextureRect" parent="VBoxContainer/HBoxContainer/OppContainer/HBoxContainer/AspectRatioContainer"]
margin_right = 66.0
margin_bottom = 66.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer/OppContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 160.0
margin_bottom = 66.0
custom_constants/separation = 64
custom_styles/separator = SubResource( 25 )

[node name="OpponentLabel" type="Label" parent="VBoxContainer/HBoxContainer/OppContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 442.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
custom_fonts/font = ExtResource( 2 )
text = "test"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Enter = SubResource( 26 )
anims/RESET = SubResource( 27 )
anims/ShowDetails = SubResource( 28 )

[connection signal="pressed" from="VBoxContainer/Heading/ShowDetailsButton" to="." method="_on_ShowDetailsButton_pressed"]
